--- a/doc/tutorials/transformer/model_retrieval.ipynb
+++ b/doc/tutorials/transformer/model_retrieval.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Load Model from Huggingface Hub\n",
     "\n",
-    "To use a model with the Transformer Extension one needs to download it from the Huggingface Hub and put into the BucketFS. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about model loading functionality it provides.\n",
+    "To use a model with the Transformer Extension one needs to download it from the Huggingface Hub and put it into the BucketFS. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about model loading functionality it provides.\n",
     "\n",
     "There are two ways of doing this.\n",
     "\n",
     "1. Using the TE_MODEL_DOWNLOADER_UDF UDF.\n",
-    "2. Downloading a model to a local drive and subsequently uploading in into the BucketFS using CLI or an API.\n",
+    "2. Downloading a model to a local drive and subsequently uploading it into the BucketFS using CLI or an API.\n",
     "\n",
     "The first method requires the database machine to have internet access. The second method provides a workaround if this is a problem. Another advantage of the second method is that it caches downloaded models on the local drive. This can make the model transfer quicker if it needs to be repeated.\n",
     "\n",
@@ -96,7 +96,7 @@
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
     "    model_dir = str(Path(conf.get('TE_MODELS_CACHE_DIR')) / sub_dir)\n",
     "    \n",
-    "    # Maybe download the model from Huggingface hub\n",
+    "    # Maybe download the model from the Huggingface hub\n",
     "    AutoTokenizer.from_pretrained(model_name, cache_dir=model_dir, token=sb_config.TE_TOKEN, force_download=force_download)\n",
     "    AutoModel.from_pretrained(model_name, cache_dir=model_dir, token=sb_config.TE_TOKEN, force_download=force_download)\n",
     "\n",
@@ -134,9 +134,9 @@
     "\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
     "    conf           - Sandbox configuration object.\n",
-    "    method         - The recognised values are \"udf\" and \"cli\". If the parameter is not set then\n",
+    "    method         - The recognized values are \"udf\" and \"cli\". If the parameter is not set then\n",
     "                     will look for method selection in the configuration. That failed the CLI method\n",
-    "                     will be used. \n",
+    "                     is used. \n",
     "    force_download - If True the model will be reloaded from the hub even if it has been cached before.\n",
     "    \"\"\"\n",
     "\n",
