--- a/doc/tutorials/transformer/question_answering.ipynb
+++ b/doc/tutorials/transformer/question_answering.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Question answering model\n",
     "\n",
-    "In this notebook we will load and use a question answering language model that can retrieve the answer to a question from a given text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/question-answering\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
+    "In this notebook, we will load and use a question-answering language model that can retrieve the answer to a question from a given text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/question-answering\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
@@ -104,7 +104,7 @@
    "source": [
     "## Get language model\n",
     "\n",
-    "To demonstrate the question answering task we will use the [roberta model](https://huggingface.co/deepset/roberta-base-squad2).\n",
+    "To demonstrate the question-answering task we will use the [roberta model](https://huggingface.co/deepset/roberta-base-squad2).\n",
     "\n",
     "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
@@ -153,10 +153,10 @@
     "\n",
     "# Let's first try it first with the following context\n",
     "TEST_CONTEXT1 = \"\"\"\n",
-    "Apart from stylish design features of new flat roofs, the other thing that’s moved on considerably is the technology\n",
+    "Apart from the stylish design features of new flat roofs, the other thing that’s moved on considerably is the technology\n",
     "used to keep them weather-proof. Once flat roofs were notoriously prone to leaking and the problem could only be solved\n",
-    "with a boiling cauldron of tar. These days there are patch repair kits, liquid rubber membranes and even quick,\n",
-    "efficient waterproofing paint that last for ages – and can even be applied in damp weather.\n",
+    "with a boiling cauldron of tar. These days there are patch repair kits, liquid rubber membranes, and even quick,\n",
+    "efficient waterproofing paint that lasts for ages – and can even be applied in damp weather.\n",
     "\"\"\"\n",
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
@@ -252,9 +252,9 @@
    "source": [
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
-    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "Another advantage of making predictions within the database is enhanced data security. The task of safeguarding privacy can be simplified given the fact that the source data never leaves the database machine.\n",
     "\n",
-    "In a more practical application the question and the context would be stored in columns of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE`, where the question is in the column `MY_QUESTION` and the context is in the column `MY_CONTEXT`, the SQL would look similar to this:\n",
+    "In a more practical application, the question and the context would be stored in columns of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE`, where the question is in the column `MY_QUESTION` and the context is in the column `MY_CONTEXT`, the SQL would look similar to this:\n",
     "```\n",
     "SELECT TE_QUESTION_ANSWERING_UDF(..., MY_QUESTION, MY_CONTEXT, 1) FROM MY_TEXT_TABLE;\n",
     "```\n",
