--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Here we will perform all the necessary steps to get the Transformer Extension functionality up and running. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> for details on the required initialization steps. The extension module should have already been installed during the installation of this product, therefore the first step mentioned in the guide can be skipped.\n",
     "\n",
-    "To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "To execute queries and load data from the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "\n",
     "## Set up"
@@ -110,7 +110,7 @@
    "source": [
     "## Upload and activate the Script-Language-Container (SLC)\n",
     "\n",
-    "The Transformer Extension requires installation of a special version of the Script Language Container - a platform for running UDF code. The <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md#the-pre-built-language-container\" target=\"_blank\" rel=\"noopener\">User Guide</a> provides detailed description of how this can be achieved. Here we will do what is described as Quick Installation - we will use the command-line interface."
+    "The Transformer Extension requires the installation of a special version of the Script Language Container - a platform for running UDF code. The <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md#the-pre-built-language-container\" target=\"_blank\" rel=\"noopener\">User Guide</a> provides a detailed description of how this can be achieved. Here we will do what is described as Quick Installation - we will use the command-line interface."
    ]
   },
   {
