--- a/doc/tutorials/transformer/token_classification.ipynb
+++ b/doc/tutorials/transformer/token_classification.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Token classifier model \n",
     "\n",
-    "In this notebook we will load and use a token classifier language model that assigns labels to some tokens in a text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/token-classification\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
+    "In this notebook, we will load and use a token classifier language model that assigns labels to some tokens in a text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/token-classification\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
@@ -104,7 +104,7 @@
    "source": [
     "## Get language model\n",
     "\n",
-    "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports etc.).\n",
+    "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports, etc.).\n",
     "\n",
     "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
@@ -138,7 +138,7 @@
    "source": [
     "## Use language model\n",
     "\n",
-    "Below is a medical report on a patient examination. In this report we will be looking for occurrences of recognized entities, such as patient data (e.g. age), symptom, clinical event, laboratory test result, etc."
+    "Below is a medical report on a patient examination. In this report, we will be looking for occurrences of recognized entities, such as patient data (e.g. age), symptoms, clinical events, laboratory test results, etc."
    ]
   },
   {
@@ -200,9 +200,9 @@
    "source": [
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
-    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "Another advantage of making predictions within the database is enhanced data security. The task of safeguarding privacy can be simplified given the fact that the source data never leaves the database machine.\n",
     "\n",
-    "In a more practical application we might want to tokenize text stored in a column of a database table. One possible use case would be collecting statistics of token occurrence in say customer reviews, where each review is stored in a separate row. For example, if the text to be tokenized is stored in the column `MY_TEXT_COLUMN` of the table `MY_TEXT_TABLE` and we want to get the counts of top 10 tokens, the SQL would look similar to this:\n",
+    "In a more practical application, we might want to tokenize text stored in a column of a database table. One possible use case would be collecting statistics of token occurrence in say customer reviews, where each review is stored in a separate row. For example, if the text to be tokenized is stored in the column `MY_TEXT_COLUMN` of the table `MY_TEXT_TABLE` and we want to get the counts of the top 10 tokens, the SQL would look similar to this:\n",
     "```\n",
     "SELECT entity, COUNT(*) as occurrence\n",
     "FROM (\n",
