Refactoring of the sandbox_config.ipynb, sandbox_config_ui.ipynb

--- a/doc/tutorials/sandbox_config.ipynb
+++ b/doc/tutorials/sandbox_config.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Before starting working with any notebook in the sandbox one needs to connect to the configuration database providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
     "\n",
-    "### Access configuration"
+    "## Access configuration"
    ]
   },
   {
@@ -47,9 +47,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad66c1d7-3207-4567-b933-5eb116b18a19",
+   "metadata": {},
+   "source": [
+    "## Create DB schema\n",
+    "\n",
+    "We will now check if the schema specified in the configuration exists. The SQL statement below will attempt to create the schema if it doesn't already exist. This may fail if the provided credentials do not include sufficient permissions. The other reason for failure would be invalid credentials. In either case please check the credentials with your database administrator.\n",
+    "\n",
+    "To execute a query on the Exasol database we will be using the pyexasol module."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddaff7d2-00f8-48ca-b711-6353d8ea0dbc",
+   "id": "66c7215f-0101-4ab1-9ce7-67ab039e6fea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyexasol\n",
+    "from stopwatch import Stopwatch\n",
+    "\n",
+    "stopwatch = Stopwatch()\n",
+    "\n",
+    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
+    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.SCHEMA}\"'\n",
+    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "    conn.execute(query=sql)\n",
+    "\n",
+    "print(f\"Schema created in {stopwatch}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d56197a-7796-4e07-b94e-3aaaaefd789e",
    "metadata": {},
    "outputs": [],
    "source": []
