--- a/doc/tutorials/sandbox_config_ui.ipynb
+++ b/doc/tutorials/sandbox_config_ui.ipynb
@@ -22,41 +22,48 @@
     "    from enum import Enum\n",
     "    import ipywidgets as widgets\n",
     "\n",
-    "    WKey = Enum('WKey', ['db_name', 'db_port', 'db_schema', 'db_user', 'db_password', 'bfs_port', 'bfs_service', 'bfs_bucket', \n",
-    "                         'bfs_user', 'bfs_password', 'bfs_protocol', 'save'])\n",
+    "    class WKey(Enum):\n",
+    "        db_name = 'EXTERNAL_HOST_NAME'\n",
+    "        db_port = 'HOST_PORT'\n",
+    "        db_schema = 'SCHEMA'\n",
+    "        db_user = 'USER'\n",
+    "        db_password = 'PASSWORD'\n",
+    "        bfs_port = 'BUCKETFS_PORT'\n",
+    "        bfs_service = 'BUCKETFS_SERVICE'\n",
+    "        bfs_bucket = 'BUCKETFS_BUCKET'\n",
+    "        bfs_user = 'BUCKETFS_USER'\n",
+    "        bfs_password = 'BUCKETFS_PASSWORD'\n",
+    "        bfs_protocol = 'BUCKETFS_USE_HTTPS'\n",
+    "        save_btn = 'save'\n",
+    "\n",
     "    style = {'description_width': '140px'}\n",
     "    inputs = {\n",
-    "        WKey.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get('EXTERNAL_HOST_NAME', '127.0.0.1'), style=style),\n",
-    "        WKey.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get('HOST_PORT', '8888')), style=style),\n",
-    "        WKey.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get('SCHEMA', 'IDA'), style=style),\n",
-    "        WKey.db_user:      widgets.Text(description='DB User', value=sb_config.get('USER'), style=style),\n",
-    "        WKey.db_password:  widgets.Password(description='DB Password', value=sb_config.get('PASSWORD'), style=style),\n",
-    "        WKey.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get('BUCKETFS_PORT', '6666')), style=style),\n",
-    "        WKey.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get('BUCKETFS_SERVICE', 'bfsdefault'),\n",
+    "        WKey.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get(WKey.db_name.value, '127.0.0.1'), style=style),\n",
+    "        WKey.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get(WKey.db_port.value, '8888')), style=style),\n",
+    "        WKey.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get(WKey.db_schema.value, 'IDA'), style=style),\n",
+    "        WKey.db_user:      widgets.Text(description='DB User', value=sb_config.get(WKey.db_user.value), style=style),\n",
+    "        WKey.db_password:  widgets.Password(description='DB Password', value=sb_config.get(WKey.db_password.value), style=style),\n",
+    "        WKey.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get(WKey.bfs_port.value, '6666')),\n",
+    "                                           style=style),\n",
+    "        WKey.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get(WKey.bfs_service.value, 'bfsdefault'),\n",
     "                                        style=style),\n",
-    "        WKey.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get('BUCKETFS_BUCKET', 'default'), style=style),\n",
-    "        WKey.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get('BUCKETFS_USER'), style=style),\n",
-    "        WKey.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get('BUCKETFS_PASSWORD'), style=style),\n",
+    "        WKey.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get(WKey.bfs_bucket.value, 'default'), style=style),\n",
+    "        WKey.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get(WKey.bfs_user.value), style=style),\n",
+    "        WKey.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get(WKey.bfs_password.value), style=style),\n",
     "        WKey.bfs_protocol: widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'], \n",
-    "                                             value='https' if sb_config.get('BUCKETFS_USE_HTTPS', 'False')=='True' else 'http',\n",
+    "                                             value='https' if sb_config.get(WKey.bfs_protocol.value, 'False')=='True' else 'http',\n",
     "                                             style=style),\n",
-    "        WKey.save:         widgets.Button(description='Save')\n",
+    "        WKey.save_btn:     widgets.Button(description='Save')\n",
     "    }\n",
     "    \n",
     "    def save_configuration(btn):\n",
-    "        sb_config.save('EXTERNAL_HOST_NAME', inputs[WKey.db_name].value)\n",
-    "        sb_config.save('HOST_PORT', inputs[WKey.db_port].value)\n",
-    "        sb_config.save('SCHEMA', inputs[WKey.db_schema].value)\n",
-    "        sb_config.save('USER', inputs[WKey.db_user].value),\n",
-    "        sb_config.save('PASSWORD', inputs[WKey.db_password].value),\n",
-    "        sb_config.save('BUCKETFS_PORT', inputs[WKey.bfs_port].value),\n",
-    "        sb_config.save('BUCKETFS_SERVICE', inputs[WKey.bfs_service].value),\n",
-    "        sb_config.save('BUCKETFS_BUCKET', inputs[WKey.bfs_bucket].value),\n",
-    "        sb_config.save('BUCKETFS_USER', inputs[WKey.bfs_user].value),\n",
-    "        sb_config.save('BUCKETFS_PASSWORD', inputs[WKey.bfs_password].value),\n",
-    "        sb_config.save('BUCKETFS_USE_HTTPS', str(inputs[WKey.bfs_protocol].value == 'https'))\n",
+    "        for key in WKey:\n",
+    "            if key == WKey.bfs_protocol:\n",
+    "                sb_config.save(key.value, str(inputs[key].value == 'https'))\n",
+    "            elif key != WKey.save_btn:\n",
+    "                sb_config.save(key.value, inputs[key].value)\n",
     "        \n",
-    "    inputs[WKey.save].on_click(save_configuration)\n",
+    "    inputs[WKey.save_btn].on_click(save_configuration)\n",
     "    \n",
     "    ui = widgets.VBox(list(inputs.values()))\n",
     "    return ui"
