Fix typo, add flag to enforce bucketfs upload

--- a/doc/tutorials/cloud/00_setup.ipynb
+++ b/doc/tutorials/cloud/00_setup.ipynb
@@ -179,7 +179,7 @@
    "execution_count": 42,
    "outputs": [],
    "source": [
-    "def put_in_bucketfs(conf: SandboxConfig, file_path: pathlib.Path, bucket_name: str = \"myudfs\") -> str:\n",
+    "def put_in_bucketfs(conf: SandboxConfig, file_path: pathlib.Path, bucket_name: str = \"myudfs\", skip_if_exists: bool = True) -> str:\n",
     "    bfs_url = conf.BUCKETFS_URL_PREFIX + conf.EXTERNAL_BUCKETFS_HOST\n",
     "    bfs_creds = {\n",
     "        bucket_name: {\n",
@@ -191,7 +191,7 @@
     "    bucket = svc[bucket_name]\n",
     "    local_jar_name = file_path.name\n",
     "    jar_exists = local_jar_name in list(bucket)\n",
-    "    if jar_exists:\n",
+    "    if skip_if_exists and jar_exists:\n",
     "        print(\"Jar file is already present in the bucketfs\")\n",
     "    else:\n",
     "        print(\"Upload jar to bucketfs\")\n",
