Further refactoring of the sandbox_config_ui.ipynb

--- a/doc/tutorials/sandbox_config_ui.ipynb
+++ b/doc/tutorials/sandbox_config_ui.ipynb
@@ -17,53 +17,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
+    "    \n",
+    "class ExasolConfig(Enum):\n",
+    "    db_name = 'EXTERNAL_HOST_NAME'\n",
+    "    db_port = 'HOST_PORT'\n",
+    "    db_schema = 'SCHEMA'\n",
+    "    db_user = 'USER'\n",
+    "    db_password = 'PASSWORD'\n",
+    "    bfs_port = 'BUCKETFS_PORT'\n",
+    "    bfs_service = 'BUCKETFS_SERVICE'\n",
+    "    bfs_bucket = 'BUCKETFS_BUCKET'\n",
+    "    bfs_user = 'BUCKETFS_USER'\n",
+    "    bfs_password = 'BUCKETFS_PASSWORD'\n",
+    "    bfs_protocol = 'BUCKETFS_USE_HTTPS'\n",
+    "\n",
     "def get_sandbox_config_ui():\n",
     "\n",
-    "    from enum import Enum\n",
     "    import ipywidgets as widgets\n",
     "\n",
-    "    class WKey(Enum):\n",
-    "        db_name = 'EXTERNAL_HOST_NAME'\n",
-    "        db_port = 'HOST_PORT'\n",
-    "        db_schema = 'SCHEMA'\n",
-    "        db_user = 'USER'\n",
-    "        db_password = 'PASSWORD'\n",
-    "        bfs_port = 'BUCKETFS_PORT'\n",
-    "        bfs_service = 'BUCKETFS_SERVICE'\n",
-    "        bfs_bucket = 'BUCKETFS_BUCKET'\n",
-    "        bfs_user = 'BUCKETFS_USER'\n",
-    "        bfs_password = 'BUCKETFS_PASSWORD'\n",
-    "        bfs_protocol = 'BUCKETFS_USE_HTTPS'\n",
-    "        save_btn = 'save'\n",
-    "\n",
+    "    Cfg = ExasolConfig\n",
     "    style = {'description_width': '140px'}\n",
     "    inputs = {\n",
-    "        WKey.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get(WKey.db_name.value, '127.0.0.1'), style=style),\n",
-    "        WKey.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get(WKey.db_port.value, '8888')), style=style),\n",
-    "        WKey.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get(WKey.db_schema.value, 'IDA'), style=style),\n",
-    "        WKey.db_user:      widgets.Text(description='DB User', value=sb_config.get(WKey.db_user.value), style=style),\n",
-    "        WKey.db_password:  widgets.Password(description='DB Password', value=sb_config.get(WKey.db_password.value), style=style),\n",
-    "        WKey.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get(WKey.bfs_port.value, '6666')),\n",
-    "                                           style=style),\n",
-    "        WKey.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get(WKey.bfs_service.value, 'bfsdefault'),\n",
-    "                                        style=style),\n",
-    "        WKey.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get(WKey.bfs_bucket.value, 'default'), style=style),\n",
-    "        WKey.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get(WKey.bfs_user.value), style=style),\n",
-    "        WKey.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get(WKey.bfs_password.value), style=style),\n",
-    "        WKey.bfs_protocol: widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'], \n",
-    "                                             value='https' if sb_config.get(WKey.bfs_protocol.value, 'False')=='True' else 'http',\n",
-    "                                             style=style),\n",
-    "        WKey.save_btn:     widgets.Button(description='Save')\n",
+    "        Cfg.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get(Cfg.db_name.value, '127.0.0.1'), style=style),\n",
+    "        Cfg.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get(Cfg.db_port.value, '8888')), style=style),\n",
+    "        Cfg.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get(Cfg.db_schema.value, 'IDA'), style=style),\n",
+    "        Cfg.db_user:      widgets.Text(description='DB User', value=sb_config.get(Cfg.db_user.value), style=style),\n",
+    "        Cfg.db_password:  widgets.Password(description='DB Password', value=sb_config.get(Cfg.db_password.value), style=style),\n",
+    "        Cfg.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get(Cfg.bfs_port.value, '6666')),\n",
+    "                                          style=style),\n",
+    "        Cfg.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get(Cfg.bfs_service.value, 'bfsdefault'),\n",
+    "                                       style=style),\n",
+    "        Cfg.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get(Cfg.bfs_bucket.value, 'default'), style=style),\n",
+    "        Cfg.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get(Cfg.bfs_user.value), style=style),\n",
+    "        Cfg.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get(Cfg.bfs_password.value), style=style),\n",
+    "        Cfg.bfs_protocol: widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'],\n",
+    "                                               value='https' if sb_config.get(Cfg.bfs_protocol.value, 'False')=='True' else 'http',\n",
+    "                                               style=style),\n",
+    "        'save':           widgets.Button(description='Save')\n",
     "    }\n",
     "    \n",
     "    def save_configuration(btn):\n",
-    "        for key in WKey:\n",
-    "            if key == WKey.bfs_protocol:\n",
+    "        for key in Cfg:\n",
+    "            if key == Cfg.bfs_protocol:\n",
     "                sb_config.save(key.value, str(inputs[key].value == 'https'))\n",
-    "            elif key != WKey.save_btn:\n",
+    "            else:\n",
     "                sb_config.save(key.value, inputs[key].value)\n",
-    "        \n",
-    "    inputs[WKey.save_btn].on_click(save_configuration)\n",
+    "\n",
+    "    inputs['save'].on_click(save_configuration)\n",
     "    \n",
     "    ui = widgets.VBox(list(inputs.values()))\n",
     "    return ui"
