Initial commit of the configuration notebook. (#34)
* Initial commit of the configuration notebook.

* Configuration notebook, addressed review issues.

* Refactoring of the sandbox_config.ipynb, sandbox_config_ui.ipynb

* Further refactoring of the sandbox_config_ui.ipynb

--- a/doc/tutorials/sandbox_config.ipynb
+++ b/doc/tutorials/sandbox_config.ipynb
@@ -7,88 +7,72 @@
    "source": [
     "# Sandbox Configuration\n",
     "\n",
-    "## Secret Store mock\n",
+    "This notebook must be visited first, before we start with the examples, in order to set up the main configuration parameters. These parameters include the location of the Exasol database and access credentials for the database and its BucketFS file system.\n",
     "\n",
-    "Here is a placeholder for setting up various variables that will be saved in the Secret Store."
+    "Once specified the parameters are stored in a local lightweight database. All notebooks including this one access configuration data in this database. The configuration database is encrypted and protected with a password.\n",
+    "\n",
+    "Before starting working with any notebook in the sandbox one needs to connect to the configuration database providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
+    "\n",
+    "## Access configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c6b9f13d-8577-4a66-a49b-cfd18b6eb231",
+   "execution_count": null,
+   "id": "8bdbff36-230c-4b08-b85e-d2cf37e28a40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import UserDict\n",
-    "\n",
-    "class Secrets(UserDict):\n",
-    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
-    "\n",
-    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
-    "        self[key] = value\n",
-    "        return self\n",
-    "\n",
-    "def get_value_as_attribute(self, key):\n",
-    "    val = self.get(key)\n",
-    "    if val is None:\n",
-    "        raise AttributeError(f'{key} value is not defined')\n",
-    "    return val\n",
-    "\n",
-    "Secrets.__getattr__ = get_value_as_attribute\n",
-    "\n",
-    "# For now just hardcode the configuration.\n",
-    "sb_config = Secrets({    \n",
-    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
-    "    'HOST_PORT': '8888',\n",
-    "    'USER': 'sys',\n",
-    "    'PASSWORD': 'exasol',\n",
-    "    'BUCKETFS_PORT': '6666',\n",
-    "    'BUCKETFS_USER': 'w',\n",
-    "    'BUCKETFS_PASSWORD': 'write',\n",
-    "    'BUCKETFS_USE_HTTPS': 'False',\n",
-    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
-    "    'BUCKETFS_BUCKET': 'default',\n",
-    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
-    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
-    "    'UDF_RELEASE': '20190116',\n",
-    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
-    "    'SCHEMA': 'IDA'\n",
-    "})\n",
-    "\n",
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\""
+    "%run ./access_store_ui.ipynb\n",
+    "display(get_access_store_ui())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55b128b0-b665-405f-889b-495fe6ff5339",
+   "id": "f859bc51-2ba7-48aa-878e-64ef7a2f2917",
    "metadata": {},
    "source": [
-    "## DB Setup\n",
-    "\n",
-    "Make sure there is the expected schema in the database."
+    "## Set up main configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cc4246c5-7cb3-477e-9cbb-4b9d8f243d36",
+   "execution_count": null,
+   "id": "911c6bcc-f357-469f-a862-3f6e246581c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Schema created in 39.17ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%run ./sandbox_config_ui.ipynb\n",
+    "display(get_sandbox_config_ui())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad66c1d7-3207-4567-b933-5eb116b18a19",
+   "metadata": {},
+   "source": [
+    "## Create DB schema\n",
+    "\n",
+    "We will now check if the schema specified in the configuration exists. The SQL statement below will attempt to create the schema if it doesn't already exist. This may fail if the provided credentials do not include sufficient permissions. The other reason for failure would be invalid credentials. In either case please check the credentials with your database administrator.\n",
+    "\n",
+    "To execute a query on the Exasol database we will be using the pyexasol module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c7215f-0101-4ab1-9ce7-67ab039e6fea",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pyexasol\n",
     "from stopwatch import Stopwatch\n",
+    "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "sql = f\"CREATE SCHEMA IF NOT EXISTS {sb_config.get('SCHEMA')}\"\n",
-    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
+    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.SCHEMA}\"'\n",
+    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "print(f\"Schema created in {stopwatch}\")"
@@ -97,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06eeb623-a3da-4896-bac0-b267a8beef8a",
+   "id": "7d56197a-7796-4e07-b94e-3aaaaefd789e",
    "metadata": {},
    "outputs": [],
    "source": []
